deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: who
spec:
  replicas: 2
  selector:
    matchLabels:
      app: who
  template:
    metadata:
      labels:
        app: who
    spec:
      containers:
        - image: traefik/whoami
          name: who
