service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  ports:
    - name: "hello-world"
      port: 80
  selector:
    app: hello-world
