service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: who
  labels:
    app: who
spec:
  ports:
    - name: "who"
      port: 80
  selector:
    app: who
