ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: hello-world
  name: hello-world-ingress
spec:
  rules:
    - host: hello-world.1c6178f0-54f7-47e9-b3ed-4313459b63cc.k8s.civo.com
      http:
        paths:
          -
            backend:
              service:
                name: hello-world
                port:
                  number: 80
            path: /
            pathType: "Prefix"
